CSD25: Try to connect codacy (#8)
* CSD25: Try to connect codacy

* CSD25: Added codacy token